@@ -58,6 +58,7 @@ inventory:
 * linux: enhanced generic SCSI storage support, thanks to po1vo
 * linux: added process to enhance storage support testing
 * fix #769: fix Virtuozzo virtualization inventory
+* fix #752: normalize video cards memory on macosx
 * Updated pci.ids to 2019.11.10 version
 * Updated usb.ids to 2019.11.05 version
 
